trying to fix images src bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          -->
         
         <div class="big">
-            <img src="../image grid/abstract-nature/big-images/1.jpg" alt="abstract nature image">
+            <img src="/image grid/abstract-nature/big-images/1.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
