still trying to fix images src bug

--- a/index.html
+++ b/index.html
@@ -31,61 +31,61 @@
          -->
         
         <div class="big">
-            <img src="/image grid/abstract-nature/big-images/1.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/big-images/1.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/astro/tall-slim-images/1.jpg" alt="astro image">
+            <img src="./astro/tall-slim-images/1.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/astro/tall-slim-images/2.jpg" alt="astro image">
+            <img src="./astro/tall-slim-images/2.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/flower/short-wide-images/1.jpg" alt="flower image">
+            <img src="./flower/short-wide-images/1.jpg" alt="flower image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/flower/short-wide-images/2.jpg" alt="flower image">
+            <img src="./flower/short-wide-images/2.jpg" alt="flower image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/landscape/small-images/1.jpg" alt="landscape image">
+            <img src="./landscape/small-images/1.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/landscape/small-images/2.jpg" alt="landscape image">
+            <img src="./landscape/small-images/2.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/landscape/small-images/3.jpg" alt="landscape image">
+            <img src="./landscape/small-images/3.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/landscape/small-images/4.jpg" alt="landscape image">
+            <img src="./landscape/small-images/4.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="big">
-            <img src="../image grid/wildlife/big-images/1.jpg" alt="abstract nature image">
+            <img src="./wildlife/big-images/1.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
@@ -99,67 +99,67 @@
             abstract small 4
          -->
         <div class="big">
-            <img src="../image grid/astro/big-images/1.jpg" alt="astro image">
+            <img src="./astro/big-images/1.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/flower/tall-slim-images/1.jpg" alt="flower nature image">
+            <img src="./flower/tall-slim-images/1.jpg" alt="flower nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/flower/tall-slim-images/2.jpg" alt="flower nature image">
+            <img src="./flower/tall-slim-images/2.jpg" alt="flower nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/landscape/short-wide-images/1.jpg" alt="landscape image">
+            <img src="./landscape/short-wide-images/1.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/landscape/short-wide-images/2.jpg" alt="landscape image">
+            <img src="./landscape/short-wide-images/2.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/wildlife/tall-slim-images/1.jpg" alt="widlife image">
+            <img src="./wildlife/tall-slim-images/1.jpg" alt="widlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/wildlife/tall-slim-images/2.jpg" alt="widlife image">
+            <img src="./wildlife/tall-slim-images/2.jpg" alt="widlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/abstract-nature/small-images/1.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/small-images/1.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/abstract-nature/small-images/2.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/small-images/2.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/abstract-nature/small-images/3.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/small-images/3.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/abstract-nature/small-images/4.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/small-images/4.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
@@ -173,67 +173,67 @@
             astro small 4
          -->
         <div class="big">
-            <img src="../image grid/flower/big-images/1.jpg" alt="flower image">
+            <img src="./flower/big-images/1.jpg" alt="flower image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/wildlife/short-wide-images/1.jpg" alt="wildlife image">
+            <img src="./wildlife/short-wide-images/1.jpg" alt="wildlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/wildlife/short-wide-images/2.jpg" alt="wildlife image">
+            <img src="./wildlife/short-wide-images/2.jpg" alt="wildlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/landscape/tall-slim-images/1.jpg" alt= "landscape image">
+            <img src="./landscape/tall-slim-images/1.jpg" alt= "landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/landscape/tall-slim-images/2.jpg" alt= "landscape image">
+            <img src="./landscape/tall-slim-images/2.jpg" alt= "landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/abstract-nature/short-wide-images/1.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/short-wide-images/1.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/abstract-nature/short-wide-images/2.jpg" alt="abstract nature image">
+            <img src="./abstract-nature/short-wide-images/2.jpg" alt="abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/astro/small-images/1.jpg" alt="astro image">
+            <img src="./astro/small-images/1.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/astro/small-images/2.jpg" alt="astro image">
+            <img src="./astro/small-images/2.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/astro/small-images/3.jpg" alt="astro image">
+            <img src="./astro/small-images/3.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/astro/small-images/4.jpg" alt="astro image">
+            <img src="./astro/small-images/4.jpg" alt="astro image">
             <button >
                 View Image
             </button>
@@ -247,79 +247,79 @@
             flower small 4
          -->
         <div class="big">
-            <img src="../image grid/landscape/big-images/1.jpg" alt="landscape image">
+            <img src="./landscape/big-images/1.jpg" alt="landscape image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/wildlife/small-images/1.jpg" alt="wildlife image">
+            <img src="./wildlife/small-images/1.jpg" alt="wildlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/wildlife/small-images/2.jpg" alt="wildlife image">
+            <img src="./wildlife/small-images/2.jpg" alt="wildlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/wildlife/small-images/3.jpg" alt="wildlife image">
+            <img src="./wildlife/small-images/3.jpg" alt="wildlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/wildlife/small-images/4.jpg" alt="wildlife image">
+            <img src="./wildlife/small-images/4.jpg" alt="wildlife image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/abstract-nature/tall-slim-images/1.jpg" alt= "abstract nature image">
+            <img src="./abstract-nature/tall-slim-images/1.jpg" alt= "abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="vertical">
-            <img src="../image grid/abstract-nature/tall-slim-images/2.jpg" alt= "abstract nature image">
+            <img src="./abstract-nature/tall-slim-images/2.jpg" alt= "abstract nature image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/astro/short-wide-images/1.jpg" alt="astro image">
+            <img src="./astro/short-wide-images/1.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="horizontal">
-            <img src="../image grid/astro/short-wide-images/2.jpg" alt="astro image">
+            <img src="./astro/short-wide-images/2.jpg" alt="astro image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/flower/small-images/1.jpg" alt="flower image">
+            <img src="./flower/small-images/1.jpg" alt="flower image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/flower/small-images/2.jpg" alt="flower image">
+            <img src="./flower/small-images/2.jpg" alt="flower image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/flower/small-images/3.jpg" alt="flower image">
+            <img src="./flower/small-images/3.jpg" alt="flower image">
             <button >
                 View Image
             </button>
         </div>
         <div class="small">
-            <img src="../image grid/flower/small-images/4.jpg" alt="flower image">
+            <img src="./flower/small-images/4.jpg" alt="flower image">
             <button >
                 View Image
             </button>
