all bugs fixed'

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
     <h1>IMAGE GRID</h1>
-    <div class="filter">
-        <select name="" id="">
-            <option value="All">All</option>
-            <option value="Landscape">Landscape</option>
-            <option value="Abstract">Abstract</option>
-            <option value="Flower">Flower</option>
-            <option value="Wildlife">Wildlife</option>
-            <option value="Astro">Astro</option>
-        </select>
-    </div>
+    <select name="" class="filter">
+        <option value="All">All</option>
+        <option value="Landscape">Landscape</option>
+        <option value="Abstract">Abstract</option>
+        <option value="Flower">Flower</option>
+        <option value="Wildlife">Wildlife</option>
+        <option value="Astro">Astro</option>
+    </select>
     <div class="container">
 
         <!-- 
@@ -88,7 +86,6 @@
                 View Image
             </button>
         </div>
-
         <!-- 
             astro big 1
             flower vertical 2
